k8s/business-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: business
  template:
    metadata:
      labels:
        component: business
    spec:
      containers:
        - name: business
          image: quake94/business-api
          ports:
            - containerPort: 8080
