k8s/business-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: business-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: business
  ports:
    - port: 8080
      targetPort: 8080
