k8s/business-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 8080
      nodePort: 32000
  selector:
    component: business
