k8s/gateway-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 8081
      targetPort: 8080
