k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetese.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /business
            backend:
              serviceName: business-cluster-ip-service
              servicePort: 8080
          - path: /gateway
            backend:
              serviceName: gateway-cluster-ip-service
              servicePort: 8081
